<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context=".BluetoothV1.Chat">

    <TextView
        android:id="@+id/text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_a_device"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:paddingBottom="5dip"
        android:text="@string/you_must_be_paired"
        android:textColor="@color/cardview_dark_background"
        android:textSize="15sp" />

    <me.aflak.pulltorefresh.PullToRefresh
        android:id="@+id/pull_to_refresh"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info">

        <ListView
            android:id="@+id/list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        </ListView>

    </me.aflak.pulltorefresh.PullToRefresh>

    <Button
        android:id="@+id/not_in_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pull_to_refresh"
        android:layout_alignParentStart="true"
        android:background="@android:color/holo_green_light"
        android:text="@string/scan_more" />

</RelativeLayout>