<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">
    <include
        android:id="@+id/phone_auth_app_toolbar"
        layout="@layout/app_bar_layout" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/track_your_friend"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:text="@string/must_be_in_your_friend"
                android:textColor="@color/cardview_dark_background"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/user_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="8dp"
                android:hint="@string/friend_number"
                android:inputType="phone"
                android:theme="@style/MyEditText" />

            <EditText
                android:id="@+id/tracker_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="8dp"
                android:hint="@string/your_number"
                android:inputType="phone"
                android:theme="@style/MyEditText" />

            <Button
                android:id="@+id/track_now_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="5dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/track_now"
                android:textColor="@color/White" />

            <ProgressBar
                android:id="@+id/phone_auth_progressbar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="-7dp"
                android:layout_marginRight="8dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:indeterminate="true"
                android:indeterminateTint="@color/colorPrimaryDark" />
        </LinearLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>