<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <include
        android:id="@+id/loginRegister_app_toolbar"
        layout="@layout/app_bar_layout" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/register_userImageCircle"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/circle_img2" />

            <EditText
                android:id="@+id/register_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="8dp"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:theme="@style/MyEditText" />

            <EditText
                android:id="@+id/register_userFullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="8dp"
                android:hint="@string/full_name"
                android:inputType="textEmailAddress"
                android:theme="@style/MyEditText" />

            <EditText
                android:id="@+id/register_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="8dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:theme="@style/MyEditText" />

            <EditText
                android:id="@+id/register_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:theme="@style/MyEditText" />


            <Button
                android:id="@+id/register_btn_CreateAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="5dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/createaccount"
                android:textAllCaps="false"
                android:textColor="@color/White" />

            <ProgressBar
                android:id="@+id/lreg_progressbar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="-7dp"
                android:layout_marginRight="8dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:indeterminate="true"
                android:indeterminateTint="@color/colorPrimaryDark" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>